dnl Process this file with autoconf to produce a configure script.

AC_INIT(blitzortung-tracker, 2.0.0)

dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE()

AC_CONFIG_MACRO_DIR([m4])

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

CXXFLAGS="${CXXFLAGS} -Wall -DBOOST_DATE_TIME_POSIX_TIME_STD_CONFIG"
AC_SUBST(CXXFLAGS)

# include libtool support
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
AC_PROG_CXX

AC_OUTPUT( \
	Makefile \
	source/Makefile \
	source/lib/Makefile \
	tests/Makefile
    )
