dnl Process this file with autoconf to produce a configure script.

AC_INIT(blitzortung-tracker, 0.9.1)

dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE()

AC_CONFIG_MACRO_DIR([m4])

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

CXXFLAGS="${CXXFLAGS} -Wall -DBOOST_DATE_TIME_POSIX_TIME_STD_CONFIG"
AC_SUBST(CXXFLAGS)

# include libtool support
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
AC_PROG_CXX

dnl PKG_CHECK_MODULES([QTCORE], [QtCore])
dnl AC_SUBST(QTCORE_CFLAGS)
dnl AC_SUBST(QTCORE_LIBS)

AC_OUTPUT( \
	Makefile \
	source/Makefile \
	source/lib/Makefile \
	scripts/Makefile \
	tests/Makefile
    )
