dnl Process this file with autoconf to produce a configure script.

AC_INIT(blitzortung-tracker, 0.9.3)

dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE()

AC_CONFIG_MACRO_DIR([m4])

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

CXXFLAGS="${CXXFLAGS} -fsigned-char -Wall -DBOOST_DATE_TIME_POSIX_TIME_STD_CONFIG"
AC_SUBST(CXXFLAGS)

# include libtool support
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
AC_PROG_CXX

dnl PKG_CHECK_MODULES([QTCORE], [QtCore])
dnl AC_SUBST(QTCORE_CFLAGS)
dnl AC_SUBST(QTCORE_LIBS)

AC_LANG_PUSH([C++])
AC_CHECK_HEADERS([boost/date_time.hpp], [], [AC_MSG_ERROR(You need the boost date-time libraries)])
AC_CHECK_HEADERS([boost/thread.hpp], [], [AC_MSG_ERROR(You need the boost thread libraries)])
AC_CHECK_HEADERS([boost/program_options.hpp], [], [AC_MSG_ERROR(You need the boost program-options libraries)])
AC_CHECK_HEADERS([log4cpp/Category.hh], [], [AC_MSG_ERROR(You need the log4cpp libraries)])
AC_CHECK_HEADERS([cppunit/TestFixture.h], [], [AC_MSG_ERROR(You need the cppunit libraries)])
AC_CHECK_HEADERS([json/json.h], [], [AC_MSG_ERROR(You need the json-c libraries)])
AC_LANG_POP([C++])

AC_OUTPUT( \
	Makefile \
	source/Makefile \
	source/lib/Makefile \
	scripts/Makefile \
	tests/Makefile
    )
